# ALIS-HEALTH

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
apps/mobile/: .gitignore  App.tsx  README.md  app.json  jest.config.js  (+2 more)
scripts/: install.sh  ollama_tailscale_proxy.mjs  ollama_tailscale_proxy.test.mjs  security-check.sh  start_ollama_tailscale_proxy_macos.sh
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py  deps.py  main.py  models.py  schemas.py
services/api/app/core/: __init__.py  agent_prompt.py  config.py
services/api/app/services/: __init__.py  agent_settings.py  auth.py  coach.py  context.py  normalizer.py  ollama.py  processing.py  sources.py
services/api/app/services/nutrition/: __init__.py  analysis.py  import_cli.py  importer.py  meals.py  references.py  storage.py  worker.py
services/api/migrations/: env.py
services/api/migrations/versions/: 001_initial_healthconnect.py  002_health_sync_runs.py  003_health_source_preferences.py  004_processing_jobs_and_dashboard_snapshots.py  005_health_agent_settings.py  006_nutrition_meals.py  007_health_coach_goals.py
services/api/tests/: conftest.py  test_auth_and_ingest.py  test_coach_api.py  test_context_api.py  test_nutrition_analysis.py  test_nutrition_api.py  test_nutrition_references.py  test_nutrition_storage.py  test_sources.py  test_sync_runs.py  test_table_prefixes.py
services/processor/: Dockerfile  pyproject.toml
services/processor/processor/: __init__.py  main.py
services/processor/tests/: test_processor.py
(+109 files in other folders)
