[project]
name = "healthconnect-processor"
version = "0.1.0"
description = "HealthConnect recompute worker"
requires-python = ">=3.11"
dependencies = ["httpx>=0.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processor"]
